# advent-of-code-2015

day1/: main.lisp
day2/: main.hs
day3/: main.hs
day5/: main.pl
day6/: main.lisp  pre.awk
day7/: main.prolog.py  main.py  main.z3.py  pyproject.toml
