[tool.poetry]
name = "day7"
version = "0.1.0"
description = ""
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "^4.12.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
